--- a/src/web-components/demo/index.html
+++ b/src/web-components/demo/index.html
@@ -12,7 +12,9 @@
           <vf-voice stem='up'>C#4/h, C#4</vf-voice>
         </vf-stave>
         <vf-stave clef='bass' timeSig='4/4' keySig='Bb'>
-          <vf-voice autoBeam>C3/q, (C3 Eb3 G3)/q, A2/q, B2</vf-voice>
+          <vf-voice autoBeam>C3/q, (C3 Eb3 G3)/q
+            <vf-tuplet stem='up'>A2/q, A2, A2</vf-tuplet>
+          </vf-voice>
         </vf-stave>
       </vf-system>
     </vf-score>
