--- a/index.html
+++ b/index.html
@@ -5,14 +5,27 @@
     <script type="module" src='./wc-src/vf-score.js'></script>
     <script type="module" src='./wc-src/vf-stave.js'></script>
     <script type="module" src='./wc-src/vf-voice.js'></script>
+    <script type="module" src='./wc-src/vf-tuplet.js'></script>
   </head>
   <body>
     <!-- <div id="boo"></div> -->
     <!-- <script type="module" src="./app.js"></script> -->
     <vf-score>
       <vf-stave clef='treble' timeSig='4/4' keySig='Bb'>
-        <vf-voice clef='treble' stem='up' generateBeams>C5/q, (C4 Eb4 G4)/q, A4, G4/16, A4, B4, C5</vf-voice>
-        <vf-voice clef='treble' stem='up'>C#4/h, C#4</vf-voice>
+        <!-- <vf-voice clef='treble' stem='up' generateBeams>C5/q, (C4 Eb4 G4)/q, A4, G4/16, A4, B4, C5</vf-voice> -->
+        <vf-voice clef='treble' stem='up'>
+          C#5/q, B4, B4
+          <vf-tuplet stem='up'>A4/8, E4, C4</vf-tuplet>
+        </vf-voice>
+      </vf-stave>
+    </vf-score>
+
+    <vf-score>
+      <vf-stave clef='treble' timeSig='3/8'>
+        <vf-voice stem='up'>
+          <vf-tuplet beamed stem='up'>B4/16, A4, G4</vf-tuplet>
+          <vf-tuplet beamed stem='down'>A4/8, F4, A4, F4, A4, F4, G4</vf-tuplet>
+        </vf-voice>
       </vf-stave>
     </vf-score>
   </body>
