Add set up for curve

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <vf-score>
       <vf-stave clef='treble' timeSig='4/4' keySig='Bb'>
         <!-- <vf-voice clef='treble' stem='up' generateBeams>C5/q, (C4 Eb4 G4)/q, A4, G4/16, A4, B4, C5</vf-voice> -->
-        <vf-voice clef='treble' stem='up'>
+        <vf-voice stem='up'>
           C#5/q, B4, B4
           <vf-tuplet stem='up'>A4/8, E4, C4</vf-tuplet>
         </vf-voice>
@@ -25,6 +25,7 @@
         <vf-voice stem='up'>
           <vf-tuplet beamed stem='up'>B4/16, A4, G4</vf-tuplet>
           <vf-tuplet beamed stem='down'>A4/8, F4, A4, F4, A4, F4, G4</vf-tuplet>
+          <vf-curve from to></vf-curve>
         </vf-voice>
       </vf-stave>
     </vf-score>
