--- a/index.html
+++ b/index.html
@@ -13,10 +13,16 @@
     <script type="module" src="./app.js"></script> -->
 
     <vf-score>
+      <vf-stave clef='treble' keySig='C'>
+        <vf-voice stem='down'>C5/q, D5, E5, F5</vf-voice>
+      </vf-stave>
+    </vf-score>
+
+    <vf-score>
       <vf-stave clef='treble' timeSig='4/4' keySig='Bb'>
         <!-- <vf-voice clef='treble' stem='up' generateBeams>C5/q, (C4 Eb4 G4)/q, A4, G4/16, A4, B4, C5</vf-voice> -->
         <vf-voice stem='up'>
-          C#5/q[id='here'], B4, B4
+          C#5/q[id='here'], B4/q., B4/8
           <vf-tuplet stem='up'>A4/8, E4[id='there'], C4</vf-tuplet>
         </vf-voice>
       </vf-stave>
