--- a/index.html
+++ b/index.html
@@ -13,32 +13,33 @@
     <script type="module" src="./app.js"></script> -->
 
     <vf-score>
-      <vf-stave clef='treble' keySig='C'>
-        <vf-voice stem='down'>C5/q, D5, E5, F5</vf-voice>
+      <vf-stave clef='treble' timeSig='4/4'>
+        <vf-voice stem='down'>c4/8[id='start'], f5, d5, g5, d6/8, f5, d5, g5[id='end']</vf-voice>
       </vf-stave>
+      <!-- <vf-curve from='start' to='end'></vf-curve> -->
     </vf-score>
 
-    <vf-score>
-      <vf-stave clef='treble' timeSig='4/4' keySig='Bb'>
+    <!-- <vf-score>
+      <vf-stave clef='treble' timeSig='4/4' keySig='Bb'> -->
         <!-- <vf-voice clef='treble' stem='up' generateBeams>C5/q, (C4 Eb4 G4)/q, A4, G4/16, A4, B4, C5</vf-voice> -->
-        <vf-voice stem='up'>
+        <!-- <vf-voice stem='up'>
           C#5/q[id='here'], B4/q., B4/8
           <vf-tuplet stem='up'>A4/8, E4[id='there'], C4</vf-tuplet>
         </vf-voice>
       </vf-stave>
       <vf-curve from='here' to='there'></vf-curve>
-    </vf-score>
+    </vf-score> -->
 
-    <vf-score>
+    <!-- <vf-score>
       <vf-stave clef='treble' timeSig='3/8'>
         <vf-voice stem='up'>
           <vf-tuplet beamed stem='down'>B4/16, A4[id='start'], G4</vf-tuplet>
           <vf-tuplet beamed stem='down'>A4/8, F4, A4[id='end'], F4, A4, F4</vf-tuplet>
         </vf-voice>
         <vf-voice stem='up'>d5/4, e5/8</vf-voice>
-      </vf-stave>
-      <vf-curve from='start' to='end'></vf-curve>
-    </vf-score>
+      </vf-stave> -->
+      <!-- <vf-curve from='start' to='end'></vf-curve> -->
+    <!-- </vf-score> -->
 
 
   </body>
