Separate beam component and auto-beaming

--- a/index.html
+++ b/index.html
@@ -14,9 +14,17 @@
 
     <vf-score>
       <vf-stave clef='treble' timeSig='4/4'>
-        <vf-voice stem='down'>c4/8[id='start'], f5, d5, g5, d6/8, f5, d5, g5[id='end']</vf-voice>
+        <vf-voice stem='down'>
+          <vf-beam stem='down'>c4/8, f5, d5, g5</vf-beam>
+          <vf-beam stem='down'>d6/8, f5, d5, g5</vf-beam>
+        </vf-voice>
       </vf-stave>
-      <!-- <vf-curve from='start' to='end'></vf-curve> -->
+    </vf-score>
+
+    <vf-score>
+      <vf-stave clef='treble' timeSig='4/4'>
+        <vf-voice stem='down' autoBeam>c4/8, f5, d5, g5, d6/8, f5, d5, g5</vf-voice>
+      </vf-stave>
     </vf-score>
 
     <!-- <vf-score>
