--- a/src/web-components/demo/index.html
+++ b/src/web-components/demo/index.html
@@ -8,8 +8,11 @@
     <vf-score x=0 height=300 renderer='canvas'>
       <vf-system>
         <vf-stave clef='treble' timeSig='4/4' keySig='Bb'>
-          <vf-voice autoBeam>C5/q[id='hello'], (C4 Eb4 G4)/q, A4, G4/16, A4, B4, C5</vf-voice>
-          <vf-voice stem='up'>C#4/h, C#4</vf-voice>
+          <vf-voice autoBeam>
+            <vf-beam stem='up'>C4/8, B3</vf-beam>
+            (C4 Eb4 G4)/q, A4, G4/16, A4, B4, C5
+          </vf-voice>
+          <!-- <vf-voice stem='up'>C#4/h, C#4</vf-voice> -->
         </vf-stave>
         <vf-stave clef='bass' timeSig='4/4' keySig='Bb'>
           <vf-voice autoBeam>C3/q, (C3 Eb3 G3)/q
