Use event.target for tuplets and beams

--- a/index.html
+++ b/index.html
@@ -13,23 +13,23 @@
     <!-- <div id="boo"></div>
     <script type="module" src="./app.js"></script> -->
 
-    <!-- <vf-score>
+    <vf-score>
       <vf-stave clef='treble' timeSig='3/4'>
         <vf-voice>
           <vf-tuplet stem='up'>G4/q, A4, B4</vf-tuplet>
           <vf-tuplet stem='up'>B4/8, A4, G4</vf-tuplet>
         </vf-voice>
       </vf-stave>
-    </vf-score> -->
+    </vf-score>
 
-    <!-- <vf-score>
+    <vf-score>
       <vf-stave clef='treble' timeSig='4/4'>
         <vf-voice stem='down'>
           <vf-beam stem='down'>c4/8, f5, d5, g5</vf-beam>
           <vf-beam stem='down'>d6/8, f5, d5, g5</vf-beam>
         </vf-voice>
       </vf-stave>
-    </vf-score> -->
+    </vf-score>
 
     <!-- <vf-score>
       <vf-stave clef='treble' timeSig='4/4'>
