--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Vexflow Test</title>
+    <title>Vexflow Component</title>
     <script type="module" src='./wc-src/vf-clef.js'></script>
     <script type="module" src='./wc-src/vf-score.js'></script>
     <script type="module" src='./wc-src/vf-stave.js'></script>
@@ -22,28 +22,34 @@
       </vf-stave>
     </vf-score> -->
 
-    <!-- <vf-score>
+    <vf-score>
+      <vf-stave clef='treble' timeSig='4/4' keySig='Bb'>
+        <vf-voice stem='up'>
+          C#5/q[id='here'], B4, A4/q., E4/8[id='there']</vf-tuplet>
+        </vf-voice>
+      </vf-stave>
+      <vf-curve from='here' to='there'></vf-curve>
+    </vf-score>
+
+    <vf-score>
       <vf-stave clef='treble' timeSig='4/4'>
         <vf-voice stem='down'>
           <vf-beam stem='down'>c4/8, f5, d5, g5</vf-beam>
           <vf-beam stem='down'>d6/8, f5, d5, g5</vf-beam>
         </vf-voice>
       </vf-stave>
-    </vf-score> -->
+    </vf-score>
 
     <vf-score>
-      <vf-stave clef='treble' timeSig='4/4'>
-        <vf-voice stem='down' autoBeam>c4/8, f5, d5, g5, d6/8, f5, d5, g5</vf-voice>
+      <vf-stave clef='bass' timeSig='3/4'>
+        <vf-voice autoBeam>(ab2 c3 f3)/4, g3/16, f3, e3, d3, d3/q/r</vf-voice>
       </vf-stave>
     </vf-score>
 
     <!-- <vf-score>
-      <vf-stave clef='treble' timeSig='4/4' keySig='Bb'>
-        <vf-voice stem='up'>
-          C#5/q[id='here'], B4, A4, E4[id='there']</vf-tuplet>
-        </vf-voice>
+      <vf-stave clef='treble' timeSig='4/4'>
+        <vf-voice stem='down' autoBeam>c4/8, f5, d5, g5, d6/8, f5, d5, g5</vf-voice>
       </vf-stave>
-      <vf-curve from='here' to='there'></vf-curve>
     </vf-score> -->
 
     <vf-score>
@@ -55,6 +61,12 @@
         <vf-voice stem='up'>d5/4, e5/8</vf-voice>
       </vf-stave>
       <vf-curve from='start' to='end'></vf-curve>
+    </vf-score>
+
+    <vf-score>
+      <vf-stave clef='treble' timeSig='4/4'>
+          <vf-voice autoBeam>e##5/8., bb4/16, c4/8, d4/16, eb4, d4, e#4, g4/32, a4, g4/16, d4/q</vf-voice>
+      </vf-stave>
     </vf-score>
 
   </body>
