--- a/src/web-components/demo/index.html
+++ b/src/web-components/demo/index.html
@@ -12,7 +12,7 @@
             <vf-beam stem='up'>C4/8, B3</vf-beam>
             (C4 Eb4 G4)/q, A4, G4/16, A4, B4, C5
           </vf-voice>
-          <!-- <vf-voice stem='up'>C#4/h, C#4</vf-voice> -->
+          <vf-voice stem='up'>C#4/h, C#4</vf-voice>
         </vf-stave>
         <vf-stave clef='bass' timeSig='4/4' keySig='Bb'>
           <vf-voice autoBeam>C3/q, (C3 Eb3 G3)/q
@@ -22,15 +22,29 @@
       </vf-system>
     </vf-score>
 
-    <vf-score height=400>
-      <vf-system>
+    <vf-score systemsPerLine=2 width=800>
+      <vf-system connected>
         <vf-stave clef='treble' timeSig='4/4' keySig='Bb'>
           <vf-voice stem='up'>
             C#5/q[id='here'], B4, A4/q., E4/8[id='there']</vf-tuplet>
           </vf-voice>
         </vf-stave>
         <!-- <vf-curve from='here' to='there'></vf-curve> -->
-        <vf-stave clef='bass'>
+        <vf-stave clef='bass' timeSig='4/4' keySig='Bb'>
+          <vf-voice stem='down'>
+            <vf-beam stem='down'>c3/8, f3, d3, g3</vf-beam>
+            <vf-beam stem='down'>d4/8, f3, d3, g3</vf-beam>
+          </vf-voice>
+        </vf-stave>
+      </vf-system>
+
+      <vf-system x=410 width=350>
+        <vf-stave clef='treble' x=410 width=350>
+          <vf-voice stem='up'>
+            C#5/q[id='here'], B4, A4/q., E4/8[id='there']</vf-tuplet>
+          </vf-voice>
+        </vf-stave>
+        <vf-stave clef='bass' x=410 width=350>
           <vf-voice stem='down'>
             <vf-beam stem='down'>c3/8, f3, d3, g3</vf-beam>
             <vf-beam stem='down'>d4/8, f3, d3, g3</vf-beam>
