Have score provide x coordinate for system

--- a/index.html
+++ b/index.html
@@ -23,14 +23,13 @@
       </vf-stave>
     </vf-score> -->
 
-    <vf-score>
+    <!-- <vf-score>
       <vf-system connected>
         <vf-stave clef='treble' timeSig='4/4' keySig='Bb'>
           <vf-voice stem='up'>
-            C#5/q[id='here'], B4, A4/q., E4/8[id='there']</vf-tuplet>
+            C#5/q[id='here'], B4, A4/q., E4/8[id='there']
           </vf-voice>
         </vf-stave>
-        <!-- <vf-curve from='here' to='there'></vf-curve> -->
         <vf-stave clef='bass' timeSig='4/4' keySig='Bb'>
           <vf-voice stem='down'>
             <vf-beam stem='down'>c3/8, f3, d3, g3</vf-beam>
@@ -39,29 +38,45 @@
         </vf-stave>
       </vf-system>
 
-      <vf-system x=410 width=350>
-        <vf-stave clef='treble' x=410 width=350>
+      <vf-system>
+        <vf-stave>
           <vf-voice stem='up'>
-            C#5/q[id='here'], B4, A4/q., E4/8[id='there']</vf-tuplet>
+            C#5/q[id='here'], B4, A4/q., E4/8[id='there']
           </vf-voice>
         </vf-stave>
-        <vf-stave clef='bass' x=410 width=350>
+        <vf-stave clef='bass'>
           <vf-voice stem='down'>
             <vf-beam stem='down'>c3/8, f3, d3, g3</vf-beam>
             <vf-beam stem='down'>d4/8, f3, d3, g3</vf-beam>
           </vf-voice>
         </vf-stave>
       </vf-system>
-    </vf-score>
 
-    <!-- <vf-score>
-      <vf-stave clef='treble' timeSig='4/4'>
-        <vf-voice stem='down'>
-          <vf-beam stem='down'>c4/8, f5, d5, g5</vf-beam>
-          <vf-beam stem='down'>d6/8, f5, d5, g5</vf-beam>
-        </vf-voice>
-      </vf-stave>
+      <vf-system>
+        <vf-stave>
+          <vf-voice stem='up'>
+            C#5/q[id='here'], B4, A4/q., E4/8[id='there']
+          </vf-voice>
+        </vf-stave>
+        <vf-stave clef='bass'>
+          <vf-voice stem='down'>
+            <vf-beam stem='down'>c3/8, f3, d3, g3</vf-beam>
+            <vf-beam stem='down'>d4/8, f3, d3, g3</vf-beam>
+          </vf-voice>
+        </vf-stave>
+      </vf-system>
     </vf-score> -->
+
+    <vf-score>
+      <vf-system>
+        <vf-stave clef='treble' timeSig='4/4'>
+          <vf-voice stem='down'>
+            <vf-beam stem='down'>c4/8, f5, d5, g5</vf-beam>
+            <vf-beam stem='down'>d6/8, f5, d5, g5</vf-beam>
+          </vf-voice>
+        </vf-stave>
+      </vf-system>  
+    </vf-score>
 
     <!-- <vf-score>
       <vf-stave clef='bass' timeSig='3/4'>
