Use new event pattern

--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
       <vf-system>
         <vf-stave>
           <vf-voice stem='up'>
-            C#5/q[id='here'], B4, A4/q., E4/8[id='there']
+            <vf-tuplet stem='up'>C5/q, B4, A4</vf-tuplet>
+            E4/q, D4
           </vf-voice>
         </vf-stave>
         <vf-stave clef='bass'>
