--- a/src/web-components/demo/index.html
+++ b/src/web-components/demo/index.html
@@ -5,15 +5,14 @@
   </head>
   <body>
     
-    <!-- Simple Example -->
-    <!-- <vf-score x=0 height=300 renderer='canvas'>
+    <!-- Simple Example: Canvas Renderer -->
+    <vf-score x=0 height=300 renderer='canvas'>
       <vf-system>
         <vf-stave clef='treble' timeSig='4/4' keySig='Bb'>
           <vf-voice autoBeam>
             <vf-beam stem='up'>C4/8, B3</vf-beam>
             (C4 Eb4 G4)/q, A4, G4/16, A4, B4, C5
           </vf-voice>
-          <vf-voice stem='up'>C#4/h, C#4</vf-voice>
         </vf-stave>
         <vf-stave clef='bass' timeSig='4/4' keySig='Bb'>
           <vf-voice autoBeam>C3/q, (C3 Eb3 G3)/q
@@ -21,7 +20,7 @@
           </vf-voice>
         </vf-stave>
       </vf-system>
-    </vf-score> -->
+    </vf-score>
 
     <!-- Two Systems, One Line -->
     <!-- <vf-score systemsPerLine=2 width=800>
