Change webpack config to build src/web-components/index.js

--- a/src/web-components/demo/index.html
+++ b/src/web-components/demo/index.html
@@ -160,5 +160,13 @@
       </vf-system>
     </vf-score>
 
+    <vf-score width=450 height=140 renderer='canvas'>
+      <vf-system>
+        <vf-stave clef='treble' timeSig='4/4'>
+          <vf-voice autoBeam>f5/8, e5, d5, c5/16, c5, d5/8, e5, f5, f5/32, f5, f5, f5</vf-voice>
+        </vf-stave>
+      </vf-system>  
+    </vf-score>
+
   </body>
 </html>
