--- a/src/web-components/demo/index.html
+++ b/src/web-components/demo/index.html
@@ -6,7 +6,7 @@
   <body>
     
     <!-- Simple Example: Canvas Renderer -->
-    <vf-score x=0 height=300 renderer='canvas'>
+    <!-- <vf-score x=0 height=300 renderer='canvas'>
       <vf-system>
         <vf-stave clef='treble' timeSig='4/4' keySig='Bb'>
           <vf-voice autoBeam>
@@ -20,7 +20,7 @@
           </vf-voice>
         </vf-stave>
       </vf-system>
-    </vf-score>
+    </vf-score> -->
 
     <!-- Two Systems, One Line -->
     <!-- <vf-score systemsPerLine=2 width=800>
@@ -53,7 +53,8 @@
       </vf-system>
     </vf-score> -->
     
-    <vf-score systemsPerLine=2 width=700>
+    <!-- Wrapping Systems -->
+    <!-- <vf-score systemsPerLine=2 width=700>
       <vf-system connected>
         <vf-stave clef='treble' timeSig='4/4' keySig='Bb'>
           <vf-voice stem='up'>
@@ -95,7 +96,7 @@
           </vf-voice>
         </vf-stave>
       </vf-system>
-    </vf-score>
+    </vf-score> -->
 
     <!-- Clef/TimeSig Inference -->
     <vf-score width=800 systemsPerLine=2>
@@ -160,12 +161,25 @@
       </vf-system>
     </vf-score>
 
+    <!-- Canvas Renderer -->
     <vf-score width=450 height=140 renderer='canvas'>
       <vf-system>
         <vf-stave clef='treble' timeSig='4/4'>
           <vf-voice autoBeam>f5/8, e5, d5, c5/16, c5, d5/8, e5, f5, f5/32, f5, f5, f5</vf-voice>
         </vf-stave>
       </vf-system>  
+    </vf-score>
+
+    <vf-score x=10 y=10 width=450 height=140 renderer='canvas'>
+      <vf-system>
+        <vf-stave clef='treble' timeSig='9/4'>
+          <vf-voice stem='up'>
+            <vf-tuplet stem='up' notesOccupied=3>f3/q[stem="up"], a5[stem="down"]</vf-tuplet>
+            <vf-tuplet stem='up' notesOccupied=3>a4/q, f3</vf-tuplet>
+            <vf-tuplet stem='up' notesOccupied=3>a4/q[stem="down"], c4[stem="down"]</vf-tuplet>
+          </vf-voice>
+        </vf-stave>
+      </vf-system>
     </vf-score>
 
   </body>
